Added ex_1b lessons. Adding jupytext for 1a and 1b.

--- a/classroom_activities/Ch01_Basics_Jupyter/ex_1a_print_and_inputs.ipynb
+++ b/classroom_activities/Ch01_Basics_Jupyter/ex_1a_print_and_inputs.ipynb
@@ -61,10 +61,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "237c4936",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The total price:\n",
+      "15\n",
+      "The history saving thread hit an unexpected error (OperationalError('attempt to write a readonly database')).History will not be written to the database.\n"
+     ]
+    }
+   ],
    "source": [
     "## 1\n",
     "number_of_magic_beans = 5\n",
@@ -99,14 +109,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9ea75aaa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1010131941.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[2], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    number of magic beans = 5\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "## 2\n",
     "## Try this. It will produce an error.\n",
     "number of magic beans = 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfa3478d",
+   "metadata": {},
+   "source": [
+    "The word \"syntax\" means the arrangement of characters, words, and symbols. For example, \"I food eat\" is invalid English syntax because the verb, \"eat\", comes after the direct object, \"food\".\n",
+    "\n",
+    "To learn more about variable name rules, see [here](https://github.com/python-can-define-radio/python-course/blob/main/resources/misc/variable_names.md)."
    ]
   },
   {
@@ -121,16 +150,6 @@
     "           ^^\n",
     "SyntaxError: invalid syntax\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cfa3478d",
-   "metadata": {},
-   "source": [
-    "The word \"syntax\" means the arrangement of characters, words, and symbols. For example, \"I food eat\" is invalid English syntax because the verb, \"eat\", comes after the direct object, \"food\".\n",
-    "\n",
-    "To learn more about variable name rules, see [here](https://github.com/python-can-define-radio/python-course/blob/main/resources/misc/variable_names.md)."
    ]
   },
   {
@@ -205,30 +224,6 @@
     "\n",
     "_Definition:_ **String**:  \n",
     "Text. More precisely, a sequence of zero or more characters (letters, numbers, symbols, etc). Examples: `\"Hi\"`, `\"bob is 3 years old\"`, `\":-)\"`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8769fb4b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## 6\n",
-    "greeting = \"Hello\"\n",
-    "customer = \"Bob\"\n",
-    "combined = greeting + customer\n",
-    "print(combined)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c88e02f1",
-   "metadata": {},
-   "source": [
-    "Notice that the `+` acts differently for strings than it does for integers. Integers are added using math (that is, `5 + 3` becomes `8`), but strings are placed next to each other (`\"Hello\"` + `\"Bob\"` becomes `\"HelloBob\"`). This is called \"concatenation\", which means \"to chain together\".\n",
-    "\n",
-    "Here are some other examples of what we can do with strings:"
    ]
   },
   {
@@ -1100,12 +1095,20 @@
    "formats": "ipynb,py:percent"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.10"
   }
  },
